--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/tylerschloesser/probable-guide/issues"
   },
-  "homepage": "https://github.com/tylerschloesser/probable-guide#readme"
+  "homepage": "https://github.com/tylerschloesser/probable-guide#readme",
+  "dependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  }
 }
