npm i webpack webpack-dev-server html-webpack-plugin

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/tylerschloesser/probable-guide#readme",
   "dependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
+    "webpack-dev-server": "^4.8.1"
   }
 }
